code/tui/src/models/snapshots/models__request__tests__kimi_desktop_model_picker.snap
---
source: code/tui/src/models/request_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────╮"
"│ Search models                            │"
"╰──────────────────────────────────────────╯"
"> K2 Preview                                "
"                                            "
"                                            "
"                                            "
