code/tui/src/models/snapshots/models__request__tests__kimi_external_model_picker.snap
---
source: code/tui/src/models/request_tests.rs
expression: terminal.backend().to_string()
---
"╭──────────────────────────────────────────╮"
"│ Search models                            │"
"╰──────────────────────────────────────────╯"
"> desktop-k2                                "
"  cli-k2                                    "
"                                            "
"                                            "
